# skillshub

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  setup.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli-reference.md  empty-default-tap.md  git-based-taps.md
docs/plans/: 2026-03-06-gist-support-design.md  2026-03-06-gist-support-plan.md  2026-05-07-empty-default-tap.md
docs/superpowers/specs/: 2026-03-23-release-1.0.0-design.md
paper_polish/: SKILL.md
plans/: 2026-03-22-git-based-taps.md  2026-05-07-changelog-versioning-policy.md
references/homebrew/: REF.md
references/scoop/: REF.md
skills/fuzzing/: SKILL.md
skills/fuzzing/references/: aflpp.md  debugging.md  grammars.md  libafl.md  libfuzzer.md  mutations.md
skills/paper-polish/: SKILL.md
skills/senior-data-scientist/scripts/: experiment_designer.py  feature_engineering_pipeline.py  model_evaluation_suite.py
skills/using-skillshub/: SKILL.md
skills/using-skillshub/references/: architecture.md  cli-reference.md
src/: agent.rs  cli.rs  main.rs  paths.rs  skill.rs  util.rs
src/commands/: agents.rs  clean.rs  doctor.rs  external.rs  info.rs  install.rs  link.rs  list.rs  mod.rs
src/registry/: db.rs  git.rs  github.rs  migration.rs  mod.rs  models.rs  skill.rs  tap.rs
tests/: agent_linking_test.rs  completions_test.rs  database_test.rs  external_skills_test.rs  local_skill_test.rs
tests/common/: fixtures.rs  mock_github.rs  mod.rs  test_env.rs
