[package]
name = "skillshub"
version = "0.1.0"
edition = "2021"
description = "A package manager for AI coding agent skills - like homebrew for skills"
authors = ["skillshub contributors"]
license = "MIT"
repository = "https://github.com/skillshub/skillshub"
keywords = ["ai", "skills", "cli", "coding-agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skillshub"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
walkdir = "2.4"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
tabled = "0.17"

[dev-dependencies]
tempfile = "3.10"
