[package]
name = "skillshub"
version = "0.1.4"
edition = "2021"
description = "A package manager for AI coding agent skills - like homebrew for skills"
authors = ["Yifeng He <yfhe.cs@gmail.com>"]
license = "MIT"
repository = "https://github.com/EYH0602/skillshub"
keywords = ["ai", "skills", "cli", "coding-agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skillshub"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
walkdir = "2.4"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
tabled = "0.17"
reqwest = { version = "0.11", features = ["json", "blocking"] }
flate2 = "1.0"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.tempfile]
version = "3.10"
