[package]
name = "skillshub"
version = "0.3.0"
edition = "2021"
rust-version = "1.74.0"
description = "A package manager for AI coding agent skills - like homebrew for skills"
authors = ["Yifeng He <yfhe.cs@gmail.com>"]
license = "MIT"
repository = "https://github.com/EYH0602/skillshub"
readme = "README.md"
keywords = ["ai", "skills", "cli", "coding-agents"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  ".github/",
  ".agents/",
  ".claude/",
  ".pre-commit-config.yaml",
  "docs/plans/",
  "plans/",
  "setup.sh",
  "AGENTS.md",
  "CLAUDE.md",
  "rustfmt.toml",
]

[[bin]]
name = "skillshub"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
tabled = "0.17"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5.0"

[dependencies.tempfile]
version = "3.10"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }
serial_test = "3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
